--- a/day-1/about-us.html
+++ b/day-1/about-us.html
@@ -33,11 +33,11 @@
         </section>
         <section>
             <h2>Our Resume</h2>
-            <a href="media/resume.pdf">You can download our resume to learn more.<br></a>
+            <p>You can <a href="media/resume.pdf">download</a> our resume to learn more.</p>
         </section>
     </main>
     <footer>
-        <a href="mailto:info@example.com">info@example.com<br></a>
+        <a href="mailto:info@example.com">info@example.com</a>
         <address>© Copyright 2024.</address>
     </footer>
 </body>
