--- a/day-2/index.html
+++ b/day-2/index.html
@@ -151,6 +151,14 @@
 				</tfoot>
 			</table>
 		</section>
+
+		<section>
+			<h2>Images</h2>
+				<h3>JPG Image</h3>
+				<img src="images/cat-photo.jpg" alt="A pic of a cat">
+				<h3>PNG Image</h3>
+				<img src="images/cat-drawing.png" alt="a drawing of a cat">
+		</section>
 	</main>
 
 	<footer>
