Day 2 audio added

--- a/day-2/index.html
+++ b/day-2/index.html
@@ -159,6 +159,17 @@
 				<h3>PNG Image</h3>
 				<img src="images/cat-drawing.png" alt="a drawing of a cat">
 		</section>
+
+		<section>
+			<h2>Audio & Video</h2>
+			<audio src="media/dialup-internet.mp3">
+				Your browser does not support the audio element.
+			</audio>
+			<audio src="media/dialup-internet.mp3" controls></audio>
+			<video src="media/storm.mp4">
+				Storm video
+			</video>
+		</section>
 	</main>
 
 	<footer>
