--- a/day-2/index.html
+++ b/day-2/index.html
@@ -23,6 +23,7 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about-us.html">About</a></li>
 				<li><a href="news.html">News</a></li>
+				<li><a href="pricing.html">Pricing</a></li>
 			</ul>
 		</nav>
 	</header>
