--- a/day-2/news.html
+++ b/day-2/news.html
@@ -7,7 +7,17 @@
 
 <body>
 	
-	<header>FWDP 1000 - Web Development 1</header>
+	<header>
+		<p>FWDP 1000 - Web Development 1</p>
+		<nav>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="about-us.html">About</a></li>
+				<li><a href="news.html">News</a></li>
+				<li><a href="pricing.html">Pricing</a></li>
+			</ul>
+		</nav>
+	</header>
 
 	<main>
 
