--- a/day-2/pricing.html
+++ b/day-2/pricing.html
@@ -3,6 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<title>Pricing</title>
+	<style>
+		table,
+		th,
+		td {
+			border: 1px solid gray;
+		}
+	</style>
+	<link rel="stylesheet" href="styles/pricing.css">
 </head>
 
 <body>
@@ -10,25 +18,34 @@
 	<header>
 		<p>FWDP 1000 - Web Development 1</p>
 
-		<!-- Add navigation to the three other pages here -->
+		<nav>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="about-us.html">About</a></li>
+				<li><a href="news.html">News</a></li>
+				<li><a href="pricing.html">Pricing</a></li>
+			</ul>
+		</nav>
 	</header>
 
 	<main>
 
 		<h1>Our Prices</h1>
+		<section>
+			<h2>Find the Plan for You</h2>
+			
+			<p>We offer three plans to meet your specific needs, assuming your specific needs fall perfectly in line with one of our three plans.</p>
+		</section>
+		<section class="warning">
 
-		<h2>Find the Plan for You</h2>
-
-		<p>We offer three plans to meet your specific needs, assuming your specific needs fall perfectly in line with one of our three plans.</p>
-
-		<table>
-			<caption>Pricing Comparison</caption>
-			<tr>
-				<th></th>
-				<th>Basic</th>
-				<th>Standard</th>
-				<th>Premium</th>
-			</tr>
+			<table>
+				<caption>Pricing Comparison</caption>
+				<tr>
+					<th></th>
+					<th>Basic</th>
+					<th>Standard</th>
+					<th>Premium</th>
+				</tr>
 			<tr>
 				<th>Price</th>
 				<td>$19 / month</td>
@@ -54,42 +71,58 @@
 				<td>20</td>
 			</tr>
 		</table>
+		</section>
+		<section>
+			<h2>Our Support Team</h2>
+			
+			<p>Our helpful support team is available 24/7. Our Premium Customers recieve priority when it comes to support but all of our customers receive top notch support from our team. We are fast, efficient and highly rated!</p>
+			
+		</section>
+		<img src="images/pexels-diva-plavalaguna-6146704.jpg" alt="Support team hands in circle" width="400" height="500">
+		<section>
 
-		<h2>Our Support Team</h2>
+			<h2>What Our Customers Say</h2>
+			
+			<blockquote>
+				<p>Morbi tincidunt metus eget nibh feugiat rutrum. Etiam elit urna, euismod eget mauris nec, condimentum finibus arcu. Praesent fermentum libero vel nibh accumsan congue. Cras fermentum, enim et facilisis molestie, urna turpis ultrices risus, in lacinia enim augue non sem.</p>
+			</blockquote>
+			
+			<blockquote>
+				<p>In maximus interdum dapibus. Mauris eget auctor ligula. Etiam ultrices quam a turpis dictum, eget dignissim leo placerat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Morbi quis ligula at lacus commodo pulvinar eget vel enim.</p>
+			</blockquote>
+			
+			<blockquote>
+				<p>Fusce imperdiet tortor fermentum urna semper maximus. Fusce tempus nisi ac turpis mattis, in convallis lectus laoreet. Sed eget elit id mauris pretium ornare ut a nulla. Proin tempus iaculis dolor, non aliquet dolor malesuada ut. Vestibulum condimentum aliquam libero ac scelerisque.</p>
+			</blockquote>
+		</section>
+			
+		<video controls width="720">
+			<source src="media/pexels-tima-miroshnichenko-6612200 (Original).mp4" type="video/mp4">
+			Your browser does not support the video element.
+		</video>
 
-		<p>Our helpful support team is available 24/7. Our Premium Customers recieve priority when it comes to support but all of our customers receive top notch support from our team. We are fast, efficient and highly rated!</p>
-		
-		<!-- Add an image here -->
+		<section>
 
-		<h2>What Our Customers Say</h2>
+			<h2>Frequently Asked Questions</h2>
+			
+			<!-- Add markup below to show/hide the answers to the questions -->
+			<details>
+				<summary>When will my order be ready?</summary>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat, est in elementum molestie, ex enim eleifend lectus, in porta ex odio vitae libero. Maecenas sit amet elit ut quam suscipit pulvinar. Pellentesque congue imperdiet augue ut laoreet. Mauris imperdiet lacinia erat at luctus.
+			</details>
+			
+			<details>
+				<summary>What are your store hours?</summary>
+				Vestibulum vel sapien sed est aliquam aliquam nec a felis. Nulla tempor ultrices mi ac congue. Morbi sed eros dignissim, sagittis sapien ac, finibus turpis. Curabitur condimentum, urna sit amet mattis faucibus, sem leo viverra orci, ac scelerisque nibh justo at magna.
+			</details>
+			<details>
 
-		<blockquote>
-			<p>Morbi tincidunt metus eget nibh feugiat rutrum. Etiam elit urna, euismod eget mauris nec, condimentum finibus arcu. Praesent fermentum libero vel nibh accumsan congue. Cras fermentum, enim et facilisis molestie, urna turpis ultrices risus, in lacinia enim augue non sem.</p>
-		</blockquote>
-
-		<blockquote>
-			<p>In maximus interdum dapibus. Mauris eget auctor ligula. Etiam ultrices quam a turpis dictum, eget dignissim leo placerat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Morbi quis ligula at lacus commodo pulvinar eget vel enim.</p>
-		</blockquote>
-
-		<blockquote>
-			<p>Fusce imperdiet tortor fermentum urna semper maximus. Fusce tempus nisi ac turpis mattis, in convallis lectus laoreet. Sed eget elit id mauris pretium ornare ut a nulla. Proin tempus iaculis dolor, non aliquet dolor malesuada ut. Vestibulum condimentum aliquam libero ac scelerisque.</p>
-		</blockquote>
-
-		<!-- Add a video here -->
-
-		<h2>Frequently Asked Questions</h2>
-		
-		<!-- Add markup below to show/hide the answers to the questions -->
-		
-		When will my order be ready?
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat, est in elementum molestie, ex enim eleifend lectus, in porta ex odio vitae libero. Maecenas sit amet elit ut quam suscipit pulvinar. Pellentesque congue imperdiet augue ut laoreet. Mauris imperdiet lacinia erat at luctus.
-
-		What are your store hours?
-		Vestibulum vel sapien sed est aliquam aliquam nec a felis. Nulla tempor ultrices mi ac congue. Morbi sed eros dignissim, sagittis sapien ac, finibus turpis. Curabitur condimentum, urna sit amet mattis faucibus, sem leo viverra orci, ac scelerisque nibh justo at magna.
-		
-		Can I return the product?
-		Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris congue, risus congue porttitor dignissim, arcu purus imperdiet massa, sit amet convallis lorem leo sit amet lorem. Cras volutpat lobortis orci, quis efficitur augue fermentum nec. Vivamus non cursus magna.
-
+				<summary>Can I return the product?</summary>
+				Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris congue, risus congue porttitor dignissim, arcu purus imperdiet massa, sit amet convallis lorem leo sit amet lorem. Cras volutpat lobortis orci, quis efficitur augue fermentum nec. Vivamus non cursus magna.
+			</details>
+			
+			
+		</section>
 	</main>
 
 	<footer>
