Added assignment files

--- a/Day-4/day-04/services.html
+++ b/Day-4/day-04/services.html
@@ -26,14 +26,14 @@
 		
 		<h1>Our Services</h1>
 		
-		<section>
+		<section class="services">
 
 			<h2>Service Types</h2>
 			
 			<p>Adipisicing elitn emo dignissimos modi minima? Corrupti quaerat atque, iste possimus enim labore quibusdam illum recusandae quia esse at temporibus magni voluptates.</p>
 			<div class="cards">
 
-				<article>
+				<article class="service-1">
 					<h2>Service #1</h2>
 					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat quis magni, nostrum iste mollitia.</p>
 				</article>
