New changes to landing format

--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -13,8 +13,10 @@
     <div class="site-wrapper">
 	
 		<header class="site-header">
+			<img src="Images/Logo.svg" alt="DR logo" class="site-logo">
+			<!-- <a href="index.html" class="site-name">Dilraj's Page</a> -->
 
-			<a href="index.html" class="site-name">Dilraj's Page</a>
+
 
 
             <nav class="site-navigation" id="site-navigation">
